--- a/Frontend/src/Components/Home.css
+++ b/Frontend/src/Components/Home.css
@@ -5,7 +5,7 @@ html {
 
  
   .img-slider-container{
-    background-color: aquamarine;
+    background-color: rgb(15, 197, 136);
     padding-top: 10px;
     padding-bottom: 40px;
   }
